--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <meta name="apple-mobile-web-app-title" content="abd_portfolio">
   <link rel="apple-touch-icon" href="/icons/Icon-192.png">
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
+
   <title>Abdullah Deshmukh - Mobile Developer</title>
   <link rel="manifest" href="/manifest.json">
 </head>
